--- a/src/scss/_theme.scss
+++ b/src/scss/_theme.scss
@@ -18,7 +18,8 @@
   --color-theme-primary: #{get-color('primary')};
   --color-theme-primary-glare: #{get-color('primary-glare')};
   --color-theme-highlight: #{get-color('highlight')};
-  --color-theme-highlight-block: #{get-color('highlight')};
+  --color-theme-highlight-block: #{get-color('primary-shade')};
+  --color-theme-feature-text: #{get-color('highlight')};
 }
 
 @include dark-mode() {
@@ -28,8 +29,8 @@
   --color-selection-text: #{get-color('dark')};
   --color-selection-bg: #{get-color('light')};
   --color-stroke: #{get-color('slate')};
-  --color-theme-primary: #{lighten(get-color('primary'), 50%)};
-  --color-theme-primary-glare: #{lighten(get-color('primary-glare'), 50%)};
+  --color-theme-primary: #{lighten(get-color('primary'), 13%)};
+  --color-theme-primary-glare: #{lighten(get-color('primary-glare'), 25%)};
   --color-action-bg: var(--color-theme-primary-glare);
   --color-action-text: #{get-color('dark')};
   --color-theme-highlight: #{get-color('highlight')};
